# supercooked

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  supercooked.yaml
api/: main.py
api/routes/: activity.py  analytics.py  beings.py  chat.py  content.py  feed.py
api/services/: being_service.py  chat_service.py  content_service.py  feed_service.py
api/ws/: chat.py
identities/kpop-princess/: VOICE.md  identity.yaml
identities/noor-of-faith/: VOICE.md  identity.yaml
identities/orange-genius/: VOICE.md  identity.yaml
identities/silicon-sardonic/: VOICE.md  identity.yaml
supercooked/: __init__.py  cli.py  config.py
supercooked/character/: __init__.py  face.py  reference.py  threeD.py
supercooked/create/: __init__.py  caption.py  compose.py  image.py  music.py  prompt_gen.py  selfie.py  thumbnail.py  video.py  voice.py
supercooked/edit/: __init__.py  assemble.py  audio.py  briefing.py  ffmpeg.py  grade.py  models.py  overlay.py  render.py  transcribe.py  understand.py
supercooked/engage/: __init__.py  interact.py  respond.py  stream.py
supercooked/identity/: action_log.py  manager.py  memory.py  schemas.py  state.py  vault.py  voice_gen.py
supercooked/intel/: __init__.py  analytics.py  ideate.py  strategy.py  trends.py
supercooked/pipeline/: __init__.py  produce.py  review.py
supercooked/publish/: __init__.py  browser.py  late.py  scheduler.py  x.py  youtube.py
supercooked/sources/: __init__.py  download.py  scrape.py
supercooked/templates/: __init__.py  base.py  carousel.py  (+10 more)
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+55 files in other folders)
